[project]
name = "crawler-python"
version = "0.1.0"
description = "An asynchronous web crawler that maps the internal linking structure of websites."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.12.14",
    "beautifulsoup4==4.13.4",
    "requests==2.32.4",
    "matplotlib>=3.10.5",
    "networkx==3.2.1",
]
